<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32D956"
    android:fadingEdge="horizontal|vertical|none"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogoLogin"
        android:layout_width="214dp"
        android:layout_height="214dp"
        android:contentDescription="@string/logo_do_reciclideia_na_tela_de_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/logo_v1" />

    <TextView
        android:id="@+id/textViewTituloReciclideia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin" />

    <TextView
        android:id="@+id/textViewSubtituloFazerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/fazer_login"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloReciclideia" />


    <ImageView
        android:id="@+id/imageViewIconePessoa"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/icone_de_pessoa"
        app:layout_constraintEnd_toStartOf="@+id/edt_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtituloFazerLogin"
        app:srcCompat="@drawable/icon_pessoa" />

    <ImageView
        android:id="@+id/imageViewIconeCadeado"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/icone_de_cadeado"
        app:layout_constraintEnd_toStartOf="@+id/edt_senha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIconePessoa"
        app:srcCompat="@drawable/icon_cad" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconePessoa"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtituloFazerLogin" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewIconeCadeado"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="112dp"
        android:backgroundTint="#fff"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:backgroundTint="#32D956"
        android:fontFamily="@font/poppins_bold"
        android:stateListAnimator="@null"
        android:text="@string/ou_criar_conta"
        android:textAllCaps="false"
        android:textColor="#75421D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />

    <Button
        android:id="@+id/btnEsqueciMinhaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:backgroundTint="#32D956"
        android:fontFamily="@font/poppins_light"
        android:stateListAnimator="@null"
        android:text="@string/esqueci_minha_senha"
        android:textAllCaps="false"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha" />


</androidx.constraintlayout.widget.ConstraintLayout>
