<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#caf283"
    tools:context=".ExcluirConta">

    <ImageButton
        android:id="@+id/imageButtonVoltarExcluirConta"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundcorner2"
        android:contentDescription="@string/cone_para_voltar_para_tela_anterior"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_botao_voltar" />

    <ImageView
        android:id="@+id/logoExcluirConta"
        android:layout_width="214dp"
        android:layout_height="214dp"
        android:contentDescription="@string/logo_da_tela_de_desativar_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/logo_v1" />


    <TextView
        android:id="@+id/tituloExcluirConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/excluir_conta"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoExcluirConta" />

    <TextView
        android:id="@+id/textViewAlerta"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/alerta"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloExcluirConta" />


    <TextView
        android:id="@+id/textViewAlerta2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/despedida"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlerta" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="265dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#fff"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/excluir"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlerta2" />


</androidx.constraintlayout.widget.ConstraintLayout>