<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#caf283"
    tools:context=".RedefinirSenha">

    <ImageButton
        android:id="@+id/imageButtonVoltarRedefinirSenha"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundcorner2"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_botao_voltar"
        android:contentDescription="@string/cone_para_voltar_para_tela_anterior" />

    <ImageView
        android:id="@+id/imageViewLogoRedefinirSenha"
        android:layout_width="214dp"
        android:layout_height="214dp"
        android:contentDescription="@string/logo_do_reciclideia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/logo_v1" />

    <TextView
        android:id="@+id/textViewRedefinirSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/redefinir_senha"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoRedefinirSenha" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="#B3000000"
        app:layout_constraintBottom_toTopOf="@+id/textViewCodigoConfirmacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRedefinirSenha"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/textViewCodigoConfirmacao"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="Insira o E-mail cadastrado no Reciclideia para que possamos lhe enviar o link para redefinir a senha."
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/buttonConcluir"
        android:layout_width="161dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#fff"
        android:text="@string/concluir"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodigoConfirmacao" />


</androidx.constraintlayout.widget.ConstraintLayout>
